--- a/dabl-meta.yaml
+++ b/dabl-meta.yaml
@@ -1,14 +1,11 @@
-## Copyright (c) 2020, Digital Asset (Switzerland) GmbH and/or its affiliates.
+## Copyright (c) 2020-2021, Digital Asset (Switzerland) GmbH and/or its affiliates.
 ## SPDX-License-Identifier: Apache-2.0
 
 catalog:
     name: dabl-pricebot
-    version: 0.5.1
+    version: 0.5.2
     short_description: Pricebot
     description: Example Slack/CoinDesk Bot
-    release_date: 2020-08-13
     author: Digital Asset (Switzerland) GmbH
     license: Apache-2.0
     tags: [ experimental ]
-subdeployments:
-    - dabl-pricebot.dar
