--- a/daml.yaml
+++ b/daml.yaml
@@ -1,18 +1,16 @@
 ## Copyright (c) 2020, Digital Asset (Switzerland) GmbH and/or its affiliates.
 ## SPDX-License-Identifier: Apache-2.0
 
-sdk-version: 1.4.0
+sdk-version: 1.11.1
 name: dabl-price-bot
-version: 1.0.0
+version: 1.0.1
 source: daml/Modules.daml
 parties:
 - Alice
 - Bob
-exposed-modules:
-- PriceBot.PriceBot
 dependencies:
 - daml-prim
 - daml-stdlib
-- ../daml-dit-integration-core/dist/dabl-integration-core.dar
-- ../daml-dit-integration-slack/dist/dabl-integration-slack.dar
-- ../daml-dit-integration-coindesk/dist/dabl-integration-coindesk.dar
+- ./lib/dabl-integration-coindesk-1.0.1.dar
+- ./lib/dabl-integration-core-1.1.1.dar
+- ./lib/dabl-integration-slack-1.1.1.dar
